--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
 </head>
 
 <body>
-    <div id='wrapper'></div>
+    <div id='wrapper'>
+
+        <div id='app'>
+            <div id='logo'></div>
+            <button id='start' class='centered'>Start Game</button>
+            <div id='button-container'></div>
+        </div>
+
+    </div>
 
     <!-- jQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    
+
     <!-- Scripts -->
     <script type='text/javascript' src='assets/javascript/app.js'></script>
 </body>
