--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 <body>
     <div id='wrapper'>
-        <div id='logo'></div>
-
+        <h1 id='title' class='centered'>Title</h1>
         <div id='app'>
+            <h1 id='question'></h1>
             <button id='start' class='centered'>Start Game</button>
             <div id='button-container'></div>
         </div>
