styles & showAnswer screen

--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     <div id='wrapper'>
         <div id='app'>
             <h1 id='title' class='centered'>Title</h1>
-            <h1 id='question' class='centered'></h1>
+
+            <div id='question-container' class='centered'>
+                <h1 id='question'></h1>
+            </div>
+
             <button id='start' class='centered'>Start Game</button>
             <div id='button-container'></div>
         </div>
