made reset button; moved start button into #button-container

--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
                 <h1 id='question'></h1>
             </div>
 
-            <button id='start' class='centered'>Start Game</button>
-            <div id='button-container'></div>
+            <div id='button-container'>
+                <button id='start' class='centered'>Start Game</button>
+            </div>
         </div>
 
     </div>
