changed id: 'start' => 'start-btn'

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <div id='button-container'>
-                <button id='start' class='centered'>Start Game</button>
+                <button id='start-btn' class='centered'>Start Game</button>
             </div>
         </div>
 
