made timer bar more visible

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <h2 id='timer'></h2>
             </div>
             <div id='progress-bar'></div>
+            <div id='progress-bar-background'></div>
 
             <div id='button-container' class='centered'>
                 <button id='start-btn' class='centered'>Start Game</button>
