added some questions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id='app'>
 
             <div id='question-container' class='centered'>
-                <h1 id='question' class='centered'>Title</h1>
+                <h1 id='question' class='centered'>Open-ended Trivia!</h1>
             </div>
 
             <div id='timer-container' class='centered'>
